Fix unnecessary setText for floating window; change checkbox to switch, fix EditText focus problems

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
         </service>
 
         <service
-            android:name=".MainService"
+            android:name=".FloatingWindowService"
             android:exported="false" />
 
         <service
