--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:customtabs:23.1.1'
     compile 'com.android.support:design:23.1.1'
+
     compile 'com.github.afollestad.material-dialogs:core:0.8.5.3'
+    compile 'com.github.afollestad.material-dialogs:commons:0.8.5.3'
 
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
@@ -81,6 +83,10 @@ dependencies {
     compile 'com.flipboard:bottomsheet-commons:1.5.0'
 
     compile 'com.github.bumptech.glide:glide:3.6.1'
+
+    compile 'com.squareup.okhttp:okhttp:2.7.1'
+
+    compile 'com.evernote:android-job:1.0.1'
 
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
