Added basic share functionality.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,8 @@
             android:name=".toolbarcolor.WebsiteService"
             android:exported="false" />
 
+        <receiver android:name=".BrowserLauncherDummyActivity$ShareBroadcastReceiver"/>
+
     </application>
 
 </manifest>
