--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,30 +65,27 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta1'
+
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:customtabs:23.1.1'
     compile 'com.android.support:design:23.1.1'
-
     compile 'com.github.afollestad.material-dialogs:core:0.8.5.3'
     compile 'com.github.afollestad.material-dialogs:commons:0.8.5.3'
-
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
-
     compile 'com.github.afollestad:inquiry:2.0.0'
-
     compile 'com.flipboard:bottomsheet-core:1.5.0'
     compile 'com.flipboard:bottomsheet-commons:1.5.0'
-
     compile 'com.github.bumptech.glide:glide:3.6.1'
-
     compile 'com.squareup.okhttp:okhttp:2.7.1'
-
     compile 'com.evernote:android-job:1.0.1'
-
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
+    /*compile project(':customtabs')*/
 }
