--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,12 +78,12 @@ dependencies {
     compile 'com.github.afollestad.material-dialogs:commons:0.8.5.3'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
-    compile 'com.github.afollestad:inquiry:2.0.0'
+    compile 'com.github.afollestad:inquiry:2.0.1'
     compile 'com.flipboard:bottomsheet-core:1.5.0'
     compile 'com.flipboard:bottomsheet-commons:1.5.0'
     compile 'com.github.bumptech.glide:glide:3.6.1'
-    compile 'com.squareup.okhttp:okhttp:2.7.1'
-    compile 'com.evernote:android-job:1.0.1'
+    compile 'com.squareup.okhttp3:okhttp:3.0.1'
+    compile 'com.evernote:android-job:1.0.2'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
