--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta1'
 
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:customtabs:23.1.1'
+    //compile 'com.android.support:customtabs:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.github.afollestad.material-dialogs:core:0.8.5.3'
     compile 'com.github.afollestad.material-dialogs:commons:0.8.5.3'
@@ -87,5 +87,5 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
-    //compile project(':customtabs')
+    compile project(':customtabs')
 }
