Add quick switch config option, add progress spinner

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,7 @@
         </service>
 
         <service
-            android:name=".FloatingWindowService"
+            android:name=".FloatingMonitorService"
             android:exported="false" />
 
         <service
