--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,8 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.squareup.okhttp3:okhttp:3.0.1'
     compile 'com.evernote:android-job:1.0.2'
+    //compile 'com.pnikosis:materialish-progress:1.7'
+    compile 'com.github.florent37:glidepalette:1.0.6'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
