Separate quick switch into own service; add shadow to bubbles, improve favicon resolution

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,10 @@
             android:exported="false" />
 
         <service
+            android:name=".quickswitch.QuickSwitchService"
+            android:exported="false" />
+
+        <service
             android:name=".customtabs.util.KeepAliveService"
             android:exported="true"
             tools:ignore="ExportedService" />
