--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
     buildTypes {
         release {
             minifyEnabled true
+            useProguard true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
@@ -78,8 +79,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     //compile 'com.android.support:customtabs:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    compile 'com.github.afollestad.material-dialogs:core:0.8.5.3'
-    compile 'com.github.afollestad.material-dialogs:commons:0.8.5.3'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.github.afollestad.material-dialogs:core:0.8.5.4'
+    compile 'com.github.afollestad.material-dialogs:commons:0.8.5.4'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'com.github.afollestad:inquiry:2.0.1'
