--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.21.2'
+        classpath 'io.fabric.tools:gradle:1.21.4'
     }
 }
 
@@ -23,6 +23,7 @@ android {
         versionCode 5
         versionName "1.1.1"
         manifestPlaceholders = [appName: "@string/app_name"]
+        vectorDrawables.useSupportLibrary = true
     }
 
     if (project.hasProperty("RELEASE_STORE_FILE")) {
@@ -76,19 +77,19 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta1'
 
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.2.0'
     //compile 'com.android.support:customtabs:23.1.1'
-    compile 'com.android.support:design:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.github.afollestad.material-dialogs:core:0.8.5.4'
-    compile 'com.github.afollestad.material-dialogs:commons:0.8.5.4'
+    compile 'com.android.support:design:23.2.0'
+    compile 'com.android.support:cardview-v7:23.2.0'
+    compile 'com.github.afollestad.material-dialogs:core:0.8.5.6'
+    compile 'com.github.afollestad.material-dialogs:commons:0.8.5.6'
     compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'io.reactivex:rxjava:1.1.0'
+    compile 'io.reactivex:rxjava:1.1.1'
     compile 'com.github.afollestad:inquiry:2.0.1'
     compile 'com.flipboard:bottomsheet-core:1.5.0'
     compile 'com.flipboard:bottomsheet-commons:1.5.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.squareup.okhttp3:okhttp:3.1.1'
+    compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'com.evernote:android-job:1.0.2'
     //compile 'com.pnikosis:materialish-progress:1.7'
     compile 'com.github.florent37:glidepalette:1.0.6'
